--- a/source/jade/header.jade
+++ b/source/jade/header.jade
@@ -4,7 +4,7 @@ header.header
 		figure.logo
 			img(src ='images.jpg' alt = 'logo')
 			
-		ul(middle_header)
+		ul.middle_header
 			li.city 
 				select
 					option(value="Kiev") Kiev
