--- a/source/jade/section_right.jade
+++ b/source/jade/section_right.jade
@@ -111,15 +111,15 @@
 						button Купить
 		.Overview
 			ul.article
-				li	
+				li.item1
 					img(src ='url')			
 					a(href = 'site.html' ) Телевизор Samsung
 					p lorem
-				li	
+				li.item2
 					img(src ='url')			
 					a(href = 'site.html' ) Телевизор Samsung
 					p lorem
-				li	
+				li.item3
 					img(src ='url')			
 					a(href = 'site.html' ) Телевизор Samsung
 					p lorem
